# social-media-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: b854afcb3886_fix_expired_at_column_in_.py  bea8099fe81f_init.py  f8640513a824_add_identity_tables.py
app/: main.py
app/identity/application/: dto.py  handlers.py  use_cases.py
app/identity/domain/: entities.py  errors.py  events.py  exceptions.py  service.py  value_objects.py
app/identity/infrastructure/: models.py  repository.py  security.py  types.py
app/identity/presentation/: dependencies.py  exception_handlers.py  router.py
app/profiles/application/: dto.py  use_cases.py
app/profiles/domain/: entities.py  events.py  exceptions.py  repositories.py  value_objects.py
app/profiles/infrastructure/: models.py  repositories.py  types.py
app/profiles/presentation/: exception_handlers.py  routers.py
app/shared/: config.py  utils.py
app/shared/domain/: base_entity.py  base_value_object.py  event_bus.py  exceptions.py  value_objects.py
app/shared/events/: event_bus.py
app/shared/infrastructure/: database.py  repository.py  types.py
app/shared/presentation/: exception_handlers.py  schemas.py
prompts/: integration_test.md  unit_test.md
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/app/identity/: conftest.py
tests/integration/app/identity/application/: test_dto.py  test_handlers.py  test_use_cases.py
tests/integration/app/identity/domain/: test_entities.py  test_events.py  test_exceptions.py  (+1 more)
tests/integration/app/shared/: conftest.py  test_config.py
tests/unit/app/shared/: test_config.py
(+35 files in other folders)
