[project]
name = "social-media-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "psycopg2>=2.9.12",
    "argon2-cffi>=25.1.0",
]


[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

exclude = [
    "**/__pycache__",
    "app/shared",
    "app/identity",
    ".venv",
    "alembic",
    "build",
    "dist",
    "tests",
]

[dependency-groups]
debug = [
    "debugpy>=1.8.21",
]
lint = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
test = [
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
